@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rcollate.1,v 1.17 2023/12/06 01:27:00 greg Exp $"
+.\" RCSid "$Id: rcollate.1,v 1.18 2024/01/25 19:25:50 greg Exp $"
 .TH RCOLLATE 1 9/5/2013 RADIANCE
 .SH NAME
 rcollate - resize or re-order matrix data
@@ -113,6 +113,11 @@ and
 .I \-f
 options are not required, but will be checked against the header
 information if provided.
+An exception is made for
+.I \-fbN
+where N>1, when no checks are made against the header,
+and the given length is assumed
+to be the exact size (in bytes) of each data record.
 .PP
 The transpose option,
 .I \-t
@@ -175,5 +180,5 @@ without a transpose or re-ordering,
 .I rcollate
 issues a warning and simply copies its input to its standard output.
 .SH "SEE ALSO"
-cnt(1), histo(1), neaten(1), rcalc(1), rcrop(1), rlam(1),  rsensor(1),
-rmtxop(1), rsplit(1), tabfunc(1), total(1)
+cnt(1), histo(1), neaten(1), rcalc(1), rcomb(1), rcrop(1), rlam(1),
+rsensor(1), rmtxop(1), rsplit(1), tabfunc(1), total(1)
