@@ -2675,3 +2675,6 @@ for light, glow, plastic, and metal primitive types.  Need
 to use new '-s' option to get new output.
 
 Added handling of spectral images to rcode2bmp script.
+
+Minor change to rcollate to allow explicit byte records to
+be any specified length without checks against header input.
